--- a/project-SACMS/src/main/resources/com/main/projectsacms/CSS Files/Dashboard.css
+++ b/project-SACMS/src/main/resources/com/main/projectsacms/CSS Files/Dashboard.css
@@ -1,7 +1,10 @@
 .RegisterButtons{
     -fx-background-color: linear-gradient(from 0.0% 0.0% to 100.0% 100.0%, #00bfff 0.0%, #ff00e9 100.0%);
+    -fx-transition-duration: 3s; /* Adjust transition duration as needed */
+
 }
 
 .RegisterButtons:hover{
-    -fx-background-color: linear-gradient(from 0.0% 0.0% to 100.0% 100.0%, #ff00e9 0.0%, #00bfff 100.0%) ;
-    }
+    -fx-background-color: linear-gradient(from 0.0% 0.0% to 100.0% 100.0%, #ff00e9 0.0%, #00bfff 100.0%);
+
+}
