--- a/project-SACMS/src/main/resources/com/main/projectsacms/FXML Files/dashboard.fxml
+++ b/project-SACMS/src/main/resources/com/main/projectsacms/FXML Files/dashboard.fxml
@@ -1,6 +1,62 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" />
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: black;" stylesheets="" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.projectsacms.HelloController">
+   <children>
+      <ImageView disable="true" fitHeight="735.0" fitWidth="784.0" layoutX="616.0" layoutY="-167.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../Icons/Functional/logo.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="27.0" fitWidth="17.0" layoutX="1226.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../Icons/Functional/fit%20to%20screen.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="31.0" fitWidth="17.0" layoutX="1201.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../Icons/Functional/minimize.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="exitButton" fitHeight="17.0" fitWidth="17.0" layoutX="1250.0" layoutY="9.0" onMouseClicked="#exitButtonClick" onMouseEntered="#exitButtonMouseEnter" onMouseExited="#exitButtonMouseExit" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../Icons/Functional/close.png" />
+         </image>
+      </ImageView>
+      <Text fill="WHITE" layoutX="796.0" layoutY="328.0" strokeType="OUTSIDE" strokeWidth="0.0" text="&quot;Empowering clubs" wrappingWidth="375.0">
+         <font>
+            <Font name="Calibri Bold" size="44.0" />
+         </font>
+      </Text>
+      <Text fill="WHITE" layoutX="822.0" layoutY="374.0" strokeType="OUTSIDE" strokeWidth="0.0" text="one click at a time&quot;" wrappingWidth="324.0">
+         <font>
+            <Font name="Calibri Bold" size="40.0" />
+         </font>
+      </Text>
+      <Button fx:id="registerButton" layoutX="798.0" layoutY="499.0" mnemonicParsing="false" onMouseEntered="#registerButtonMouseEnter" onMouseExited="#registerButtonMouseExit" prefHeight="53.0" prefWidth="170.0" style="-fx-background-radius: 30;" styleClass="RegisterButtons" stylesheets="@../CSS%20Files/Dashboard.css" text="Register" textFill="WHITE">
+         <font>
+            <Font name="Calibri Bold" size="22.0" />
+         </font></Button>
+      <Button fx:id="loginButton" layoutX="1000.0" layoutY="499.0" mnemonicParsing="false" onMouseEntered="#loginButtonMouseEnter" onMouseExited="#loginButtonMouseExit" prefHeight="53.0" prefWidth="170.0" style="-fx-background-radius: 30;" styleClass="RegisterButtons" stylesheets="@../CSS%20Files/Dashboard.css" text="Login" textFill="WHITE">
+         <font>
+            <Font name="Calibri Bold" size="22.0" />
+         </font>
+      </Button>
+      <Text fill="#3a3c3c" layoutX="889.0" layoutY="469.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Start Your Journey with us!" wrappingWidth="219.0">
+         <font>
+            <Font name="Calibri Bold" size="17.0" />
+         </font>
+      </Text>
+      <ImageView fitHeight="720.0" fitWidth="682.0" pickOnBounds="true">
+         <image>
+            <Image url="@../Icons/Background/neon%20gif.gif" />
+         </image>
+      </ImageView>
+   </children>
+</AnchorPane>
