--- a/project-SACMS/src/main/resources/com/main/projectsacms/FXML Files/dashboard.fxml
+++ b/project-SACMS/src/main/resources/com/main/projectsacms/FXML Files/dashboard.fxml
@@ -14,12 +14,7 @@
             <Image url="@../Icons/Functional/logo.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="27.0" fitWidth="17.0" layoutX="1226.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../Icons/Functional/fit%20to%20screen.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="31.0" fitWidth="17.0" layoutX="1201.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="minimizeButton" fitHeight="31.0" fitWidth="17.0" layoutX="1226.0" layoutY="9.0" onMouseEntered="#minimizeButtonMouseEnter" onMouseExited="#minimizeButtonMouseExit" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../Icons/Functional/minimize.png" />
          </image>
@@ -29,12 +24,12 @@
             <Image url="@../Icons/Functional/close.png" />
          </image>
       </ImageView>
-      <Text fill="WHITE" layoutX="796.0" layoutY="328.0" strokeType="OUTSIDE" strokeWidth="0.0" text="&quot;Empowering clubs" wrappingWidth="375.0">
+      <Text fx:id="quote1" fill="WHITE" layoutX="796.0" layoutY="328.0" strokeType="OUTSIDE" strokeWidth="0.0" text="&quot;Empowering clubs" wrappingWidth="375.0">
          <font>
             <Font name="Calibri Bold" size="44.0" />
          </font>
       </Text>
-      <Text fill="WHITE" layoutX="822.0" layoutY="374.0" strokeType="OUTSIDE" strokeWidth="0.0" text="one click at a time&quot;" wrappingWidth="324.0">
+      <Text fx:id="quote2" fill="WHITE" layoutX="822.0" layoutY="374.0" strokeType="OUTSIDE" strokeWidth="0.0" text="one click at a time&quot;" wrappingWidth="324.0">
          <font>
             <Font name="Calibri Bold" size="40.0" />
          </font>
@@ -48,7 +43,7 @@
             <Font name="Calibri Bold" size="22.0" />
          </font>
       </Button>
-      <Text fill="#3a3c3c" layoutX="889.0" layoutY="469.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Start Your Journey with us!" wrappingWidth="219.0">
+      <Text fx:id="quote3" fill="#3a3c3c" layoutX="889.0" layoutY="472.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Start Your Journey with us!" wrappingWidth="219.0">
          <font>
             <Font name="Calibri Bold" size="17.0" />
          </font>
@@ -58,5 +53,6 @@
             <Image url="@../Icons/Background/neon%20gif.gif" />
          </image>
       </ImageView>
+      <Text fill="#3a3c3c" layoutX="840.0" layoutY="705.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" OOP Group 23 - StudentSync © 2023 All Rights Reserved" />
    </children>
 </AnchorPane>
