--- a/project-SACMS/src/main/resources/com/main/projectsacms/FXML Files/dashboard.fxml
+++ b/project-SACMS/src/main/resources/com/main/projectsacms/FXML Files/dashboard.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -9,11 +10,40 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: black;" stylesheets="" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.projectsacms.HelloController">
    <children>
-      <ImageView disable="true" fitHeight="735.0" fitWidth="784.0" layoutX="616.0" layoutY="-167.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../Icons/Functional/logo.png" />
-         </image>
-      </ImageView>
+      <Group layoutX="616.0" layoutY="-167.0">
+         <children>
+            <ImageView disable="true" fitHeight="735.0" fitWidth="784.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../Icons/Functional/logo.png" />
+               </image>
+            </ImageView>
+            <Text fx:id="quote1" fill="WHITE" layoutX="180.0" layoutY="462.0" strokeType="OUTSIDE" strokeWidth="0.0" text="&quot;Empowering clubs" wrappingWidth="375.0">
+               <font>
+                  <Font name="Calibri Bold" size="44.0" />
+               </font>
+            </Text>
+            <Text fx:id="quote2" fill="WHITE" layoutX="206.0" layoutY="511.0" strokeType="OUTSIDE" strokeWidth="0.0" text="one click at a time&quot;" wrappingWidth="324.0">
+               <font>
+                  <Font name="Calibri Bold" size="40.0" />
+               </font>
+            </Text>
+            <Button fx:id="registerButton" layoutX="182.0" layoutY="666.0" mnemonicParsing="false" onMouseEntered="#registerButtonMouseEnter" onMouseExited="#registerButtonMouseExit" prefHeight="53.0" prefWidth="170.0" style="-fx-background-radius: 30;" styleClass="RegisterButtons" stylesheets="@../CSS%20Files/Dashboard.css" text="Register" textFill="WHITE">
+               <font>
+                  <Font name="Calibri Bold" size="22.0" />
+               </font>
+            </Button>
+            <Button fx:id="loginButton" layoutX="384.0" layoutY="666.0" mnemonicParsing="false" onMouseEntered="#loginButtonMouseEnter" onMouseExited="#loginButtonMouseExit" prefHeight="53.0" prefWidth="170.0" style="-fx-background-radius: 30;" styleClass="RegisterButtons" stylesheets="@../CSS%20Files/Dashboard.css" text="Login" textFill="WHITE">
+               <font>
+                  <Font name="Calibri Bold" size="22.0" />
+               </font>
+            </Button>
+            <Text fx:id="quote3" fill="#3a3c3c" layoutX="273.0" layoutY="626.25" strokeType="OUTSIDE" strokeWidth="0.0" text="Start Your Journey with us!" wrappingWidth="219.0">
+               <font>
+                  <Font name="Calibri Bold" size="17.0" />
+               </font>
+            </Text>
+         </children>
+      </Group>
       <ImageView fx:id="minimizeButton" fitHeight="31.0" fitWidth="17.0" layoutX="1226.0" layoutY="9.0" onMouseEntered="#minimizeButtonMouseEnter" onMouseExited="#minimizeButtonMouseExit" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../Icons/Functional/minimize.png" />
@@ -24,30 +54,6 @@
             <Image url="@../Icons/Functional/close.png" />
          </image>
       </ImageView>
-      <Text fx:id="quote1" fill="WHITE" layoutX="796.0" layoutY="328.0" strokeType="OUTSIDE" strokeWidth="0.0" text="&quot;Empowering clubs" wrappingWidth="375.0">
-         <font>
-            <Font name="Calibri Bold" size="44.0" />
-         </font>
-      </Text>
-      <Text fx:id="quote2" fill="WHITE" layoutX="822.0" layoutY="374.0" strokeType="OUTSIDE" strokeWidth="0.0" text="one click at a time&quot;" wrappingWidth="324.0">
-         <font>
-            <Font name="Calibri Bold" size="40.0" />
-         </font>
-      </Text>
-      <Button fx:id="registerButton" layoutX="798.0" layoutY="499.0" mnemonicParsing="false" onMouseEntered="#registerButtonMouseEnter" onMouseExited="#registerButtonMouseExit" prefHeight="53.0" prefWidth="170.0" style="-fx-background-radius: 30;" styleClass="RegisterButtons" stylesheets="@../CSS%20Files/Dashboard.css" text="Register" textFill="WHITE">
-         <font>
-            <Font name="Calibri Bold" size="22.0" />
-         </font></Button>
-      <Button fx:id="loginButton" layoutX="1000.0" layoutY="499.0" mnemonicParsing="false" onMouseEntered="#loginButtonMouseEnter" onMouseExited="#loginButtonMouseExit" prefHeight="53.0" prefWidth="170.0" style="-fx-background-radius: 30;" styleClass="RegisterButtons" stylesheets="@../CSS%20Files/Dashboard.css" text="Login" textFill="WHITE">
-         <font>
-            <Font name="Calibri Bold" size="22.0" />
-         </font>
-      </Button>
-      <Text fx:id="quote3" fill="#3a3c3c" layoutX="889.0" layoutY="472.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Start Your Journey with us!" wrappingWidth="219.0">
-         <font>
-            <Font name="Calibri Bold" size="17.0" />
-         </font>
-      </Text>
       <ImageView fitHeight="720.0" fitWidth="682.0" pickOnBounds="true">
          <image>
             <Image url="@../Icons/Background/neon%20gif.gif" />
