--- a/project-SACMS/src/main/resources/com/main/projectsacms/CSS Files/Dashboard.css
+++ b/project-SACMS/src/main/resources/com/main/projectsacms/CSS Files/Dashboard.css
@@ -1,6 +1,5 @@
 .RegisterButtons{
     -fx-background-color: linear-gradient(from 0.0% 0.0% to 100.0% 100.0%, #00bfff 0.0%, #ff00e9 100.0%);
-    -fx-transition-duration: 3s; /* Adjust transition duration as needed */
 
 }
 
@@ -8,3 +7,41 @@
     -fx-background-color: linear-gradient(from 0.0% 0.0% to 100.0% 100.0%, #ff00e9 0.0%, #00bfff 100.0%);
 
 }
+
+
+.form-area{
+    -fx-background-color: black;
+    -fx-background-radius: 30;
+    -fx-border-radius: 30;
+    -fx-border-color: linear-gradient(from 0.0% 0.0% to 100.0% 100.0%, #ff00e9 0.0%, #00bfff 100.0%);
+}
+
+.form-area:focused{
+    -fx-border-color:  #00d5ff;
+}
+
+
+.role-Buttons{
+    -fx-background-radius: 30;
+    -fx-border-radius: 30;
+    -fx-background-color: black;
+    -fx-border-color: linear-gradient(from 0.0% 0.0% to 100.0% 100.0%, #ff00e9 0.0%, #00bfff 100.0%);
+}
+
+.role-Buttons:hover{
+    -fx-background-color: linear-gradient(from 0.0% 0.0% to 100.0% 100.0%, #ff00e9 0.0%, #00bfff 100.0%);
+
+}
+
+.formDate{
+    -fx-border-color: linear-gradient(from 0.0% 0.0% to 100.0% 100.0%, #ff00e9 0.0%, #00bfff 100.0%);
+}
+
+.formDate .text-field {
+    -fx-control-inner-background: black;
+}
+
+.formDate .arrow-button {
+    -fx-background-color: linear-gradient(from 0.0% 0.0% to 100.0% 100.0%, #ff00e9 0.0%, #00bfff 100.0%);
+}
+
