--- a/project-SACMS/src/main/resources/com/main/projectsacms/FXML Files/startPage.fxml
+++ b/project-SACMS/src/main/resources/com/main/projectsacms/FXML Files/startPage.fxml
@@ -16,7 +16,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: black;" stylesheets="" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.projectsacms.startPageController">
    <children>
-      <Group fx:id="FirstGroup" layoutX="616.0" layoutY="-167.0">
+      <Group fx:id="FirstGroup" layoutX="616.0" layoutY="-167.0" opacity="0.0">
          <children>
             <Text fx:id="quote1" fill="WHITE" layoutX="180.0" layoutY="462.0" strokeType="OUTSIDE" strokeWidth="0.0" text="&quot;Empowering clubs" wrappingWidth="375.0">
                <font>
@@ -128,7 +128,7 @@
             <DatePicker layoutX="256.0" layoutY="246.0" prefHeight="36.0" prefWidth="191.0" styleClass="formDate" stylesheets="@../CSS%20Files/Dashboard.css" />
          </children>
       </Group>
-      <Group disable="true" layoutX="757.0" layoutY="209.0" opacity="0.0">
+      <Group disable="true" layoutX="757.0" layoutY="209.0">
          <children>
             <TextField layoutX="247.0" layoutY="22.0" prefHeight="40.0" prefWidth="207.0" style="-fx-background-radius: 30;" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
             <TextField layoutY="22.0" prefHeight="40.0" prefWidth="207.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
