--- a/project-SACMS/src/main/resources/com/main/projectsacms/FXML Files/startPage.fxml
+++ b/project-SACMS/src/main/resources/com/main/projectsacms/FXML Files/startPage.fxml
@@ -105,7 +105,7 @@
          <children>
             <TextField fx:id="advisorLastName" layoutX="247.0" layoutY="22.0" onKeyTyped="#advisorLastNameValidation" prefHeight="40.0" prefWidth="207.0" style="-fx-background-radius: 30;" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
             <TextField fx:id="advisorFirstName" layoutY="22.0" onKeyTyped="#advisorFirstNameValidation" prefHeight="40.0" prefWidth="207.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
-            <TextField fx:id="advisorEmail" layoutY="166.0" prefHeight="40.0" prefWidth="331.0" style="-fx-background-radius: 30;" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
+            <TextField fx:id="advisorEmail" layoutY="166.0" onKeyTyped="#advisorEmailValidation" prefHeight="40.0" prefWidth="331.0" style="-fx-background-radius: 30;" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
             <Button fx:id="registerButton1" layoutX="142.0" layoutY="398.0" mnemonicParsing="false" onMouseEntered="#registerButtonMouseEnter" onMouseExited="#registerButtonMouseExit" prefHeight="53.0" prefWidth="170.0" style="-fx-background-radius: 30;" styleClass="RegisterButtons" stylesheets="@../CSS%20Files/Dashboard.css" text="Register" textFill="WHITE">
                <font>
                   <Font name="Calibri Bold" size="22.0" />
