--- a/project-SACMS/src/main/resources/com/main/projectsacms/FXML Files/Attendance/AttendancePage.fxml
+++ b/project-SACMS/src/main/resources/com/main/projectsacms/FXML Files/Attendance/AttendancePage.fxml
@@ -216,11 +216,10 @@
             <Button fx:id="onSaveButtonClick1" layoutX="788.0" layoutY="12.0" mnemonicParsing="false" onAction="#saveButtonOnClick" text="Reset" />
          </children>
       </Group>
-      <Button fx:id="switchToPageOneButton" layoutX="944.0" layoutY="661.0" mnemonicParsing="false" onAction="#switchToPageOne" prefHeight="25.0" prefWidth="26.0" text="1" />
-      <Button fx:id="switchToPageFourButton" layoutX="1041.0" layoutY="661.0" mnemonicParsing="false" onAction="#switchToPageFour" prefHeight="25.0" prefWidth="26.0" text="4" />
-      <Button fx:id="switchToPageTwoButton" layoutX="976.0" layoutY="661.0" mnemonicParsing="false" onAction="#switchToPageTwo" prefHeight="25.0" prefWidth="26.0" text="2" />
-      <Button fx:id="switchToPageThreeButton" layoutX="1008.0" layoutY="661.0" mnemonicParsing="false" onAction="#switchToPageThree" prefHeight="25.0" prefWidth="26.0" text="3" />
-      <Button fx:id="changePageToLeftButton" layoutX="913.0" layoutY="661.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="26.0" text="&lt;" />
-      <Button fx:id="changePageToRightButton" layoutX="1073.0" layoutY="661.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="26.0" text="&gt;" />
+      <Button fx:id="switchToPageOneButton" layoutX="925.0" layoutY="661.0" mnemonicParsing="false" onAction="#switchToPageOne" prefHeight="25.0" prefWidth="26.0" text="1" />
+      <Button fx:id="switchToPageFourButton" layoutX="1022.0" layoutY="661.0" mnemonicParsing="false" onAction="#switchToPageFour" prefHeight="25.0" prefWidth="26.0" text="4" />
+      <Button fx:id="switchToPageTwoButton" layoutX="957.0" layoutY="661.0" mnemonicParsing="false" onAction="#switchToPageTwo" prefHeight="25.0" prefWidth="26.0" text="2" />
+      <Button fx:id="switchToPageThreeButton" layoutX="989.0" layoutY="661.0" mnemonicParsing="false" onAction="#switchToPageThree" prefHeight="25.0" prefWidth="26.0" text="3" />
+      <Button fx:id="switchToPageFiveButton" layoutX="1056.0" layoutY="661.0" mnemonicParsing="false" onAction="#switchToPageFive" prefHeight="25.0" prefWidth="26.0" text="5" />
    </children>
 </AnchorPane>
