--- a/project-SACMS/src/main/resources/com/main/projectsacms/FXML Files/Attendance/AttendancePage.fxml
+++ b/project-SACMS/src/main/resources/com/main/projectsacms/FXML Files/Attendance/AttendancePage.fxml
@@ -97,7 +97,7 @@
                      </font>
                   </Label>
                   <DatePicker fx:id="filterEventDateFrom" layoutX="298.0" layoutY="80.0" />
-                  <DatePicker layoutX="493.0" layoutY="80.0" />
+                  <DatePicker fx:id="filterEventDateTo" layoutX="493.0" layoutY="80.0" />
                   <Label layoutX="298.0" layoutY="59.0" prefHeight="17.0" prefWidth="68.0" text="From" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="14.0" />
