--- a/project-SACMS/src/main/resources/com/main/projectsacms/FXML Files/Attendance/AttendancePage.fxml
+++ b/project-SACMS/src/main/resources/com/main/projectsacms/FXML Files/Attendance/AttendancePage.fxml
@@ -170,7 +170,7 @@
                   <Font name="System Bold" size="15.0" />
                </font>
             </Label>
-            <Label layoutX="779.0" layoutY="70.0" prefHeight="27.0" prefWidth="103.0" text="Logged Time" textFill="WHITE">
+            <Label fx:id="meetingTimeOrVenueLabel" layoutX="779.0" layoutY="70.0" prefHeight="27.0" prefWidth="103.0" text="Meeting Time" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
