--- a/project-SACMS/src/main/resources/com/main/projectsacms/FXML Files/chooseClub.fxml
+++ b/project-SACMS/src/main/resources/com/main/projectsacms/FXML Files/chooseClub.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -14,8 +16,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.projectsacms.startPageController">
    <children>
       <BorderPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: grey;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <left>
@@ -35,7 +36,7 @@
                         <Insets left="30.0" right="30.0" />
                      </VBox.margin>
                      <children>
-                        <TextField prefHeight="28.0" prefWidth="149.0" promptText="Type to search" style="-fx-background-radius: 20;">
+                        <TextField fx:id="SearchToJoin" prefHeight="28.0" prefWidth="149.0" promptText="Type to search" style="-fx-background-radius: 20;">
                            <HBox.margin>
                               <Insets left="20.0" />
                            </HBox.margin>
@@ -43,7 +44,7 @@
                               <Font name="System Bold" size="11.0" />
                            </font>
                         </TextField>
-                        <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="64.0" style="-fx-background-radius: 20; -fx-background-color: black;" text="search" textFill="#fffefe">
+                        <Button fx:id="onClickSearchClubClick" mnemonicParsing="false" onAction="#onClickSearchClubClickToJoin" prefHeight="25.0" prefWidth="64.0" style="-fx-background-radius: 20; -fx-background-color: black;" text="search" textFill="#fffefe">
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor>
@@ -64,7 +65,7 @@
                               <Insets left="20.0" />
                            </opaqueInsets>
                            <children>
-                              <Label alignment="TOP_LEFT" text="Sports Club" textFill="WHITE">
+                              <Label fx:id="ClubnameDisplay" alignment="TOP_LEFT" text="Sports Club" textFill="WHITE">
                                  <font>
                                     <Font name="Agency FB Bold" size="39.0" />
                                  </font>
@@ -78,7 +79,7 @@
                            </image>
                         </ImageView>
                         <Pane prefHeight="33.0" prefWidth="200.0" />
-                        <Button mnemonicParsing="false" prefHeight="0.0" prefWidth="130.0" style="-fx-background-color: black; -fx-background-radius: 20;" text="Join" textFill="WHITE">
+                        <Button fx:id="JoinClubbutton" mnemonicParsing="false" onAction="#onClickJoinClub" prefHeight="0.0" prefWidth="130.0" style="-fx-background-color: black; -fx-background-radius: 20;" text="Join" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font>
@@ -89,6 +90,14 @@
                </children>
             </VBox>
          </left>
+         <center>
+            <TableView prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: black;" BorderPane.alignment="CENTER">
+              <columns>
+                <TableColumn fx:id="clubnamecolumn" prefWidth="142.0" style="-fx-background-color: Green;" text="Club Name" />
+                <TableColumn fx:id="clubdescriptioncolumn" prefWidth="357.0" style="-fx-background-color: Green;" text="Club Description" />
+              </columns>
+            </TableView>
+         </center>
       </BorderPane>
    </children>
 </AnchorPane>
