--- a/project-SACMS/src/main/resources/com/main/mainAttendance/FXML Files/startPage.fxml
+++ b/project-SACMS/src/main/resources/com/main/mainAttendance/FXML Files/startPage.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: black;" stylesheets="" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.projectsacms.startPageController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: black;" stylesheets="" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.mainAttendance.startPageController">
    <children>
       <Group fx:id="FirstGroup" layoutX="616.0" layoutY="-167.0">
          <children>
